# pinapeg

./: .env.example  .gitignore  README.md  pinapeg_implementation_plan.md  render.yaml  voice-schedule-companion-brief.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  reset_db.py
backend/app/: __init__.py  config.py  database.py  embeddings.py  essence.py  google_oauth.py  job_handlers.py  main.py  models.py  paper_intelligence.py  papers.py  prompt_queue.py  prompting.py  schemas.py  security.py  services.py  store.py  transcription.py  url_scraper.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_domain_schema.py  0002_engineer_workflows.py
backend/pinapeg_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: test_services.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: api.ts  auth.ts  dev-sw-cleanup.ts  main.tsx  styles.css  sw.ts  types.ts
infra/google-oauth/: README.md
infra/neon/: README.md
infra/neon-auth/: README.md
stitch_echo_journal_schedule/active_reminder_muted/: code.html
stitch_echo_journal_schedule/conversation_history_muted/: code.html
stitch_echo_journal_schedule/home_voice_capture_muted/: code.html
stitch_echo_journal_schedule/onboarding_permissions_muted/: code.html
stitch_echo_journal_schedule/open_thoughts_muted/: code.html
stitch_echo_journal_schedule/tethered_earth/: DESIGN.md
stitch_echo_journal_schedule/today_s_schedule_muted/: code.html
(+1 files in other folders)
