[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pinapeg-api"
version = "0.1.0"
description = "Pinapeg trusted backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30", "pydantic>=2.8", "pydantic-settings>=2.4",
  "sqlalchemy>=2.0", "psycopg[binary]>=3.2", "pgvector>=0.3", "cryptography>=43", "httpx>=0.27",
  "pypdf>=5.0", "alembic>=1.13"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
pinapeg-worker = "app.worker:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
